<resources>
    <string name="app_name">Balinese Mask</string>
    <string name="app_name_splash">Identification\nBalinese Mask</string>
    <string name="app_name_home">Identification Balinese\nMask</string>
    <string name="take_image">Take Image</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="guide">Guide</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="about_application">About Application</string>
    <string name="about_application_text">The Balinese Mask Identification Application is an application that is intended to help people find out the types of Balinese masks through an image. \n\nThis application utilizes the KNN (K-Nearest Neighbor) classification algorithm to determine the type of Balinese mask according to the image obtained by the user.\n\nThis application is built on the basis of Android smart devices by utilizing the Python programming language in the classification process and also Android Kotlin on the front-end and its application</string>
    <string name="created_by">Created by : \nNi Made Elvina Aryadhika Putri\n1808561052</string>
    <string name="guide_application">Guide Application</string>
    <string name="guide1">Mask detection via photo from camera:</string>
    <string name="guidedetail1">1. Select \"Take a Picture\"\n2. Navigate the mask according to the existing guide.\n3. Press the shutter button.\n4. Wait for the process to finish.\n5. Enjoy reading the information about Balinese Mask.</string>
    <string name="guide2">Mask detection via photo from gallery:</string>
    <string name="guidedetail2">1. Select \"Download From Gallery\".\n2. Wait for the process to finish.\n3. Enjoy reading the information about Balinese masks.</string>
    <string name="next">Next</string>
    <string name="preview">preview</string>
    <string-array name="name">
        <item>Topeng Tua</item>
        <item>Topeng Bujung/Demuh</item>
        <item>Topeng Dalem</item>
        <item>Topeng Patih</item>
        <item>Topeng Sidakarya</item>
        <item>Topeng Wijil</item>
        <item>Topeng Penasar</item>
        <item>Topeng Jero Luh</item>
        <item>Topeng Jero Gede</item>
        <item>Topeng Telek</item>
        <item>Topeng Sidakarya Selem</item>
        <item>Topeng Jauk Keras</item>
        <item>Topeng Jauk Manis</item>
        <item>Topeng Sita</item>
        <item>Topeng Rama</item>
        <item>Topeng hanuman</item>
        <item>Topeng Rahwana</item>
        <item>Topeng wayang wong sangut</item>
        <item>Topeng wayang wong merdah</item>
        <item>Topeng wayang wong tualen </item>
        <item>Topeng wayang wong Delem</item>
        <item>Topeng Bondres Tugek</item>
        <item>Topeng Bondres Tua</item>
        <item>Topeng Bondres Bongol</item>
        <item>Topeng Bondres</item>
        <item>Topeng Bondres</item>
    </string-array>
</resources>