<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_app"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:transitionName="logo"
            android:src="@drawable/app_logo"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_home"
            android:transitionName="name"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/iv_app"
            app:layout_constraintStart_toStartOf="@id/iv_app"
            app:layout_constraintEnd_toEndOf="@id/iv_app"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_camera"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_image"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_gallery"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_gallery"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_guide"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guide"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_info"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_settings"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="25dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:src="@drawable/ic_out"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="12dp"
                        />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>